--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "churn-prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9hpm5tlIH7qeUfHJ7dCms",
+      "authorship_tag": "ABX9TyOgLAm/iILA5rieaU88PfLw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -133,12 +133,13 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "random_seed = 6234\n",
+        "train, test = train_test_split(data, test_size=.2, random_state=random_seed)"
       ],
       "metadata": {
         "id": "ndNicTDBLaOe"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     }
   ]
