--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "churn-prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOgLAm/iILA5rieaU88PfLw",
+      "authorship_tag": "ABX9TyPDDucZ4+EX5/gIi5l/Ezfb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -24,12 +24,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ChristopherCrook/assign03-50-Crook/blob/1-create-new-notebook/churn_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ChristopherCrook/assign03-50-Crook/blob/3-build-training-pipeline-and-cross-validate/churn_prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "metadata": {
         "id": "64b-Y374JgjT"
       },
@@ -42,7 +42,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "#machine learning\n",
-        "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+        "from sklearn.model_selection import train_test_split, GridSearchCV, KFold\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.pipeline import Pipeline \n",
@@ -73,9 +73,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3deEpa23KD2K",
-        "outputId": "c3ff5868-4e9d-4d6f-930a-9c0246d1213a"
+        "outputId": "d694c0f0-9fc2-40e9-e26a-6106ad02025d"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,64 @@
       "metadata": {
         "id": "ndNicTDBLaOe"
       },
-      "execution_count": 8,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Build Training Pipeline"
+      ],
+      "metadata": {
+        "id": "xslKl3j8zPpi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def RemoveEmployeeNumber(dataFrame):\n",
+        "  return dataFrame.drop('EmployeeNumber', 1)\n",
+        "\n",
+        "trainPipe = train.pipe(RemoveEmployeeNumber)"
+      ],
+      "metadata": {
+        "id": "AQPIFFhyzaV4",
+        "outputId": "687cc78c-0ec4-4af0-9c01-9183e9ee961a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+            "  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Cross-Validate\n",
+        "I'm not sure exactly how to do this."
+      ],
+      "metadata": {
+        "id": "IQw8__ZkXEZk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "3A3f3l96XJOi"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
